--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meninas TI Projeto Final</title>
+    <link rel="stylesheet" src="style.css" />
+</head>
+<body>
+    <header >
+        <div class="logo"><img src="logo.png.png">/> </div>
+        <div class="menu"><nav>
+            <ul>
+                <li> <a href="#"> Home</a></li>
+                <li> <a href="#"> Sobre</a></li>
+                <li> <a href="#"> Empresa</a></li>
+                <li> <a href="#"> Contato</a></li>
+                
 
+
+            </ul>
+        </nav></div>
+        <div class="social">
+            <ul>
+                <li> <a href="#"> FB</a></li>
+                <li> <a href="#"> IG</a></li>
+                <li> <a href="#"> YT</a></li>
+            </ul>
+        </div>
+    </header>
+    <section></section>
+        <section></section>
+        <section></section>
+    <footer></footer>
+</body>
+</html>
